--- a/CLIENT/src/app/app.component.html
+++ b/CLIENT/src/app/app.component.html
@@ -1,12 +1,6 @@
 <app-header></app-header>
 
 <div class="container mt-6">
-    <h2 class="tex-3xl font-bold">Welcome to the game of Life</h2>
-    <ul>
-        @for(product of products; track product.id)
-        {
-            <li>{{product.name}}</li>
-        }
-    </ul>
+    <app-shop></app-shop>
 </div>
 
