--- a/CLIENT/src/styles.scss
+++ b/CLIENT/src/styles.scss
@@ -31,3 +31,15 @@ button.match-input-height{
 .mdc-notched-outline__notch{
     border-right-style: none !important;
 }
+
+.mat-mdc-snack-bar-container.snack-error{
+    --mdc-snackbar-container-color:rgb(209, 7, 7);
+    --mat-snackbar-button-color:#fff;
+    --mdc-snackbar-supporting-text-color:#fff;
+}
+
+.mat-mdc-snack-bar-container.snack-success{
+    --mdc-snackbar-container-color:rgb(2, 108, 2);
+    --mat-snackbar-button-color:#fff;
+    --mdc-snackbar-supporting-text-color:#fff;
+}
