--- a/CLIENT/src/app/features/shop/product-details/product-details.component.html
+++ b/CLIENT/src/app/features/shop/product-details/product-details.component.html
@@ -12,21 +12,29 @@
 
       <div>
         <h1 class="text-2xl font-semibold text-gray-900">{{ product.name }}</h1>
+
+        <p>You have {{ quantityInCart }} of this product in your cart</p>
+
         <div class="mt-4 items-center gap-4 flex">
           <p class="text-3xl font-extrabold text-gray-900">
-            {{ product.price | currency }}
+            {{ product.price | currency : "INR" : "symbol-narrow" : "4.2-2" }}
           </p>
         </div>
 
         <div class="flex gap-4 mt-6">
-          <button mat-flat-button class="match-input-heigth">
+          <button
+            [disabled]="quantity === quantityInCart"
+            (click)="updateCart()"
+            mat-flat-button
+            class="match-input-heigth"
+          >
             <mat-icon>shopping_cart</mat-icon>
-            Add to cart
+            {{ getbuttonText() }}
           </button>
 
           <mat-form-field appearance="outline" class="flex">
             <mat-label>Quantity</mat-label>
-            <input matInput type="number" />
+            <input matInput min="0" [(ngModel)]="quantity" type="number" />
           </mat-form-field>
         </div>
         <mat-divider></mat-divider>
